[gd_scene load_steps=8 format=3 uid="uid://bql271jx3j07n"]

[ext_resource type="Script" path="res://collages/button.gd" id="1_4rme2"]
[ext_resource type="Texture2D" uid="uid://cqjrca4ohwqph" path="res://art/botão.png" id="2_4rme2"]
[ext_resource type="Texture2D" uid="uid://crhwa4ddnb71" path="res://art/botõapertado.png" id="3_4rme2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wakv6"]
size = Vector2(85, 59)

[sub_resource type="SpriteFrames" id="SpriteFrames_6miev"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_4rme2")
}],
"loop": true,
"name": &"not_pressed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_4rme2")
}],
"loop": true,
"name": &"pressed",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wakv6"]
radius = 17.0
height = 86.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6miev"]
size = Vector2(87, 62)

[node name="Button" type="StaticBody2D"]
collision_layer = 4
script = ExtResource("1_4rme2")

[node name="CollisionNotPressed" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -1.5)
shape = SubResource("RectangleShape2D_wakv6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(3.00001, -9.5)
scale = Vector2(0.09375, 0.115505)
sprite_frames = SubResource("SpriteFrames_6miev")
animation = &"not_pressed"

[node name="CollisionPressed" type="CollisionShape2D" parent="."]
position = Vector2(0, 12)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_wakv6")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_4rme2")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, -2)
shape = SubResource("RectangleShape2D_6miev")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
